exports[`GetReplyAndGetArticle GetArticle should allow filtering replyConnections 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "deletedReplies": Array [
        Object {
          "id": "foo3-bar2",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "id": "foo3-fofo",
          "status": "NORMAL",
        },
      ],
      "replyConnections": Array [
        Object {
          "id": "foo3-bar2",
          "status": "DELETED",
        },
        Object {
          "id": "foo3-fofo",
          "status": "NORMAL",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetArticle should get the specified article & associated replies from ID 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "references": Array [
        Object {
          "type": "LINE",
        },
      ],
      "replyConnections": Array [
        Object {
          "canUpdateStatus": false,
          "createdAt": "2015-01-01T12:10:30Z",
          "id": "foo-bar",
          "reply": Object {
            "versions": Array [
              Object {
                "reference": "barbar",
                "text": "bar",
                "type": "NOT_ARTICLE",
              },
            ],
          },
          "status": "NORMAL",
          "updatedAt": "2015-01-02T12:10:30Z",
        },
      ],
      "replyCount": 1,
      "replyRequestCount": 1,
      "requestedForReply": true,
      "text": "Lorum ipsum",
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should get allow filtering replyConnections 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "deletedReplies": Array [
        Object {
          "id": "foo3-bar2",
          "status": "DELETED",
        },
      ],
      "normalReplies": Array [
        Object {
          "id": "foo2-bar2",
          "status": "NORMAL",
        },
      ],
      "replyConnections": Array [
        Object {
          "id": "foo2-bar2",
          "status": "NORMAL",
        },
        Object {
          "id": "foo3-bar2",
          "status": "DELETED",
        },
      ],
    },
  },
}
`;

exports[`GetReplyAndGetArticle GetReply should get the specified reply & associated articles from ID 1`] = `
Object {
  "data": Object {
    "GetReply": Object {
      "replyConnections": Array [
        Object {
          "article": Object {
            "text": "Lorum ipsum",
          },
          "canUpdateStatus": true,
        },
      ],
      "versions": Array [
        Object {
          "reference": "barbar",
          "text": "bar",
          "type": "NOT_ARTICLE",
        },
      ],
    },
  },
}
`;

exports[`relatedArticle filter test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJiYXNpYyNmb28zIl0=",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.35971722,
          },
          Object {
            "cursor": "WyJiYXNpYyNmb28yIl0=",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;

exports[`relatedArticle no-param test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WyJiYXNpYyNmb28zIl0=",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.35971722,
          },
          Object {
            "cursor": "WyJiYXNpYyNmb28yIl0=",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;

exports[`relatedArticle sorting test 1`] = `
Object {
  "data": Object {
    "GetArticle": Object {
      "relatedArticles": Object {
        "edges": Array [
          Object {
            "cursor": "WzAuMzU5NzE3MjIsImJhc2ljI2ZvbzMiXQ==",
            "node": Object {
              "id": "foo3",
              "text": "Lorum ipsum Lorum ipsum Lorum ipsum",
            },
            "score": 0.35971722,
          },
          Object {
            "cursor": "WzAuMzY3MjExMywiYmFzaWMjZm9vMiJd",
            "node": Object {
              "id": "foo2",
              "text": "Lorum ipsum Lorum ipsum",
            },
            "score": 0.3672113,
          },
        ],
      },
    },
  },
}
`;
